src/test/deca/context/invalid/provided/testi13.deca
class A{
    void saso(int x){
        return x;
    }
}
